auth problem solved

--- a/100-next-js-13-projects/promptopia/utils/.env
+++ b/100-next-js-13-projects/promptopia/utils/.env
@@ -1,7 +1,6 @@
-GOOGLE_ID = 696250618813-vnmj6m01ok22ll6qmlnni51u9kv0t3st.apps.googleusercontent.com
-GOOGLE_CLIENT_SECRET = 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
-MONGODB_URI = mongodb+srv://shrestharahul388:1Mommylife$@promptopia.pmbkztr.mongodb.net/?retryWrites=true&w=majority
+# GOOGLE_CLIENT_ID="696250618813-vnmj6m01ok22ll6qmlnni51u9kv0t3st.apps.googleusercontent.com",
+# GOOGLE_CLIENT_SECRET="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",
+MONGODB_URI=mongodb+srv://shrestharahul388:1Mommylife$@promptopia.pmbkztr.mongodb.net/?retryWrites=true&w=majority,
 
-NEXTAUTH_URL = http://localhost:3000
-NEXTAUTH_URL_INTERNAL = http://localhost:3000
-NEXTAUTH_SECRET = pRp0QecVWKjrtxUTNphPlNNQHbURlb9E121YxXH8aZs=
+# NEXTAUTH_URL="http://localhost:3000",
+# NEXTAUTH_SECRET="codingwithrahul;"
