--- a/mern-stack-projects/SajiloKhaana/backend/.env
+++ b/mern-stack-projects/SajiloKhaana/backend/.env
@@ -1,2 +1,6 @@
 MONGODB_URL=mongodb+srv://admin:admin123@cluster0.xowkr0s.mongodb.net/?retryWrites=true&w=majority
 PORT=8000
+EMAIL_USER=rahul.ussac@gmail.com
+EMAIL_PASS=jklceizagbtmzrjf
+
+        
