--- a/mern-stack-projects/SajiloKhaana/backend/.env
+++ b/mern-stack-projects/SajiloKhaana/backend/.env
@@ -3,5 +3,5 @@ PORT=8000
 SECRET_KEY= thisissecretkeydontshare
 EMAIL_USER=rahul.ussac@gmail.com
 EMAIL_PASS=jklceizagbtmzrjf
-
+BACKEND_URL = http://localhost:8000/
         
