node mailer added

--- a/sikdai-ho-pasa/Backend/node-js/beginner-pathway/news-api/.env
+++ b/sikdai-ho-pasa/Backend/node-js/beginner-pathway/news-api/.env
@@ -1,3 +1,5 @@
 PORT=8000
 SECRETKEY="thisissecretkey"
 WEBSITE="http://localhost:8000/"
+EMAIL="rahul.ussac@gmail.com"
+APPPASSWORD="ayjacajinojpyoqt"
