--- a/web-dev-projects/mern-stack-projects/uber-ko-eats/.env
+++ b/web-dev-projects/mern-stack-projects/uber-ko-eats/.env
@@ -1,2 +1,3 @@
 PORT=8000
-MONGOURI=mongodb+srv://admin:admin@uber-ko-eats.bnuzrs7.mongodb.net/?retryWrites=true&w=majority
+MONGOURI=mongodb+srv://admin:admin@uber-ko-eats.bnuzrs7.mongodb.net/?retryWrites=true&w=majority# .env file
+JWT_SECRET=mySecretKey
