--- a/web-dev-projects/mern-stack-projects/uber-ko-eats/.env
+++ b/web-dev-projects/mern-stack-projects/uber-ko-eats/.env
@@ -3,3 +3,4 @@ MONGOURI=mongodb+srv://admin:admin@uber-ko-eats.bnuzrs7.mongodb.net/?retryWrites
 JWT_SECRET=mySecretKey
 EMAIL_USER=rahul.ussac@gmail.com
 EMAIL_PASS=xpoeddwqugcewfoj
+BACKEND_URL=http://localhost:8000/
