--- a/sikdai-ho-pasa/Backend/online-book-store/frontend/package.json
+++ b/sikdai-ho-pasa/Backend/online-book-store/frontend/package.json
@@ -13,6 +13,8 @@
     "@nextui-org/react": "^2.2.9",
     "axios": "^1.6.5",
     "framer-motion": "^10.18.0",
+    "jsonwebtoken": "^9.0.2",
+    "jwt-decode": "^4.0.0",
     "preline": "^2.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
