--- a/web-dev-projects/mern-stack-projects/online-book-store/api/.env
+++ b/web-dev-projects/mern-stack-projects/online-book-store/api/.env
@@ -4,5 +4,5 @@ CLIENT_ID=129773609051-5dk0tto5suijlb8mu6idho2be7nbkd7b.apps.googleusercontent.c
 CLIENT_SECRET=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
 CALLBACKURL=http://localhost:8000/auth/google/callback
 SESSION_SECRET="thisissecret"
-SECRET="thisissecret"
+SECRET="thisissecretkey"
 JWT_SECRET='thisissecretkey'
