--- a/web-dev-projects/mern-stack-projects/online-book-store/api/.env
+++ b/web-dev-projects/mern-stack-projects/online-book-store/api/.env
@@ -6,3 +6,6 @@ CALLBACKURL=http://localhost:8000/auth/google/callback
 SESSION_SECRET="thisissecret"
 SECRET="thisissecretkey"
 JWT_SECRET='thisissecretkey'
+
+EMAIL_USER=rahul.ussac@gmail.com
+EMAIL_PASS=xpoeddwqugcewfoj
